--- a/code-env/python/spec/requirements.txt
+++ b/code-env/python/spec/requirements.txt
@@ -1,4 +1,6 @@
-nltk==3.4.5
-sumy==0.8.1
+nltk==3.4.5; python_version < '3.8'
+nltk==3.8.1; python_version >= '3.8'
+sumy==0.8.1; python_version < '3.8'
+sumy==0.11.0; python_version >= '3.8'
 pycountry==19.8.18
 
